FEC-5282 fix share and full screen issues on iPhone

--- a/modules/KalturaSupport/components/share/share.css
+++ b/modules/KalturaSupport/components/share/share.css
@@ -204,7 +204,7 @@
     font-size: 4em;
 }
 .mobile .small.share .share-input-container{
-   margin-top: 24px;
+   margin-top: 2em;
 }
 
 .mobile .share .icon-border{
@@ -285,6 +285,9 @@
 	width: 34px;
 	height: 32px;
 }
+.mobile .small.share .icon-border{
+	width: 40px;
+}
 .small.share .share-icons-scroller{
 	width: 270px;
 	height: 32px;
@@ -294,6 +297,9 @@
 }
 .small.share .share-icons-container{
 	width: 222px;
+}
+.mobile .small.share .share-icons-container{
+	width: 250px;
 }
 .small.share .share-network{
 	font-size: 0.7em;
